2008-02-14  Darin Adler  <darin@apple.com>

        - added back accidentally-removed files

        * platform/DeprecatedStringList.cpp: Copied from platform/DeprecatedStringList.cpp.
        * platform/DeprecatedStringList.h: Copied from platform/DeprecatedStringList.h.
        * platform/mac/DeprecatedStringListMac.mm: Copied from platform/mac/DeprecatedStringListMac.mm.

2008-02-14  Darin Adler  <darin@apple.com>

        - more build fixes

        * platform/KURL.cpp:
        (WebCore::appendEncodedHostname): Use String to make a QString.
        * platform/network/cf/ResourceRequest.h:
        (WebCore::ResourceRequest::ResourceRequest): Removed a stray deprecatedString() call.
        * platform/network/curl/ResourceHandleManager.cpp:
        (WebCore::parseDataUrl): Updated to String rather than DeprecatedString functions.

2008-02-14  Darin Adler  <darin@apple.com>

        - next Qt build fix

        * platform/network/qt/ResourceRequest.h:
        (WebCore::ResourceRequest::ResourceRequest): Removed a stray deprecatedString() call.

2008-02-14  Darin Adler  <darin@apple.com>

        - another build fix

        * platform/network/curl/ResourceRequest.h:
        (WebCore::ResourceRequest::ResourceRequest): Removed a stray deprecatedString() call.

2008-02-14  Darin Adler  <darin@apple.com>

        - first Qt build fix

        * dom/XMLTokenizer.cpp:
        (WebCore::XMLTokenizer::endElementNs): Added a missing string() call.

2008-02-14  Darin Adler  <darin@apple.com>

        Reviewed by Eric Seidel.

        Based on work by Marvin Decker <marv.decker@gmail.com>

        - fix http://bugs.webkit.org/show_bug.cgi?id=16538
          KURL should use String instead of DeprecatedString

        - fix http://bugs.webkit.org/show_bug.cgi?id=16485
          DocLoader::checkForReload will crash if the URL isNull
          and a similar problem in IconDatabase

        - fix http://bugs.webkit.org/show_bug.cgi?id=16487